--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     const gr = document.querySelector('#bargraph');
     const socket = io();
     let isNew = true
-    socket.on('plot', (d) => {
+    socket.on('plot', function(d) {
         if(isNew) {
             Plotly.newPlot(gr, d.data, d.layout);
             isNew = false
